tests/negative/typecheck/sum-annot-repeat.orng
fn main() -> Int
    let x: (y:Int | y:Int | y:Int)
    0